# pythonInvestBot

./: .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  pyproject.toml  requirements.txt
api/: tinkoff_api.py
core/: invest_portfolio.py  log.py  money_utilities.py  portfolio_instruments.py  strategy.py  telegram_messages.py
invest_bot/: configs.py  main.py  mypy.ini
invest_bot/api/: tinkoff_api.py
invest_bot/core/: decorators.py  invest.py  invest_portfolio.py  log.py  logs.py  money_utilities.py  portfolio.py  strategy.py
investbot/: core_main.py  main.py  telegram_main.py
investbot/adapters/: portfolio_formatter.py
investbot/core/: base_types.py  invest_portfolio.py  log.py  money_utilities.py  portfolio_instruments.py  strategy.py  telegram_messages.py
investbot/core/adapters/: portfolio.py  tinkoff_portfolio.py
investbot/core/api/: tinkoff_api.py
investbot/core/domain/: portfolio_models.py
investbot/core/domain/strategy/: strategy.py  strategy_models.py
investbot/core/formatter/: portfolio_formatter.py
investbot/core/portfolio/portfolio_adapters/: portfolio.py  tinkoff_portfolio.py
investbot/core/portfolio/portfolio_models/: portfolio_models.py
investbot/core/portfolio_adapters/: portfolio.py  tinkoff_portfolio.py
investbot/core/strategy/: strategy.py  strategy_models.py
investbot/formatter/: portfolio_formatter.py
test/: conftest.py  test_invest_portfolio.py
